--- a/foodbox/Dockerfile
+++ b/foodbox/Dockerfile
@@ -1,4 +1,4 @@
 From openjdk:8
-Expose 8089
-Add 
-ENTRYPOINT ["java","-jar",""]
+Expose 8080
+Add target/foodbox-spring-version1.jar foodbox-spring-version1.jar
+ENTRYPOINT ["java","-jar","foodbox-spring-version1.jar"]
