--- a/foodbox/pom.xml
+++ b/foodbox/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>foodbox-spring</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>version1</version>
 	<name>foodbox</name>
 	<description>Capstone Project</description>
 	<properties>
