--- a/foodbox/src/main/resources/application.properties
+++ b/foodbox/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://foodbox-db.chsvl7uowhv8.us-east-1.rds.amazonaws.com/foodbox
+spring.datasource.url=jdbc:mysql://localhost:3306/foodbox
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
